# git-backup-s3

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: lint.yml
src/: main.py  test_main.py
